<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  Login activity -->
    <string name="app_name">HelloArtikCloud</string>
    <string name="hello_world">Please login to ARTIK Cloud</string>
    <string name="click">login</string>

    <!-- Message activity -->
    <string name="play_with_messages">Play with ARTIK Cloud</string>
    <string name="welcome_txt">Welcome </string>
    <string name="send_btn_txt">send a message</string>
    <string name="sendmsg_response">Response </string>
    <string name="getlatest_btn_txt">Get the latest message</string>
    <string name="getlatest_response_mid">id </string>
    <string name="getlatest_response_mdata">data </string>

    //added
    <string name="rules_instruction">"Click a button to get or create or delete LIGHT ON and LIGHT OFF rules"</string>
    <string name="device_name">Device Name</string>
    <string name="device_id">Device ID</string>
    <string name="device_status">Device Status</string>
    <string name="status_update_time">Status Update Time</string>
    <string name="action_settings">Settings</string>
    <string name="websocket_live_status">WebSocket /live status</string>
    <string name="fire_detector_live_status">Flame detector /live status</string>

    <string name="device_monitor_title">Home Device</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_states">Unknown states</string>
    <string name="unknown_update_time">Unknown update time</string>

    <string name="rules_apicall_response">RULEs api call response is here...</string>


</resources>
