<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".RuleActivity">

    <TextView
        android:id="@+id/rules_region"
        android:text="@string/rules_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="14sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/getRulesBtn"
            android:enabled="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get" />

        <Button
            android:id="@+id/createRuleBtn"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create" />

        <Space android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/updateRuleBtn"
            android:enabled="true"
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:text="Update" />

        <Space android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/deleteRuleBtn"
            android:enabled="false"
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete" />
    </LinearLayout>

    <TextView
        android:id="@+id/rules_apicall_response"
        android:text="@string/rules_apicall_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <View style="@style/Divider"/>
    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <TextView
        android:id="@+id/rule_name"
        android:text="rule name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/rule_id"
        android:text="@string/device_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/rule_status"
        android:text="@string/device_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/rule_rule"
        android:text="@string/status_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <View style="@style/Divider"/>

    <TextView
        android:id="@+id/rule_name2"
        android:text="@string/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/rule_id2"
        android:text="@string/device_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/rule_status2"
        android:text="@string/device_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/rule_rule2"
        android:text="@string/status_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/modRname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="input temp or ntu"
        />
    <EditText
        android:id="@+id/modfiedValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="input the modified value"
        />


</LinearLayout>


